# Writing-a-Good-Prompt

./: GoodPrompt.ipynb  README.md  ai_patents.csv  pyproject.toml
