[tool.poetry]
name = "writing-a-good-prompt"
version = "0.1.0"
description = ""
authors = ["jehlum <rehanmbl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"
llama-index-llms-ollama = "^0.4.0"
llama-index = "^0.12.0"
llama-index-embeddings-ollama = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
